sample/error/stackoverflow_gen.bfr
let fix f =
  let g x = f (fun y -> x x y) in
  g g

codegen [
  *fix
    (fun loop _ -> [ *loop 0 ])
    0
]